Improved styling on login pages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-body {
+/*body {
 }
 
 .container {
@@ -266,4 +266,4 @@ button.destroy {
 
 input[type="checkbox"]:focus {
     outline: none;
-}
+}*/
